# src/libs/HeyGen/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.4
+openapi: '3.2.0'
 info:
   title: HeyGen API
   description: "Welcome to the **HeyGen API** Postman Collection. This collection provides a convenient way to interact with the HeyGen API directly from Postman.\n\n**Documentation**: [https://docs.heygen.com](https://docs.heygen.com/)  \n**Guides**: [https://docs.heygen.com/docs<br>](https://docs.heygen.com/docs/quick-start)**API Reference**: [https://docs.heygen.com/reference](https://docs.heygen.com/reference/authentication-1)\n\n## Authorization\n\nTo send requests to the API endpoints, you must use a valid API token. You can get your API token from the [Settings &gt; API ](https://app.heygen.com/settings?nav=API) page in your HeyGen account.\n\n1. In Postman, go to the **Environments** tab on the left panel.\n    \n2. Select the **My HeyGen API Environment** environment provided by HeyGen.\n    \n3. Update the `heygen-api-token` value with your current HeyGen API token.\n    \n4. Ensure **My HeyGen API Environment** is selected as the active environment using the environment selector at the top right corner of Postman.\n    \n\n### 400 response\n\nA 400 error response typically indicates that your request body is corrupted. To avoid this, ensure that your request body is correctly formatted and includes all necessary elements, such as closing parentheses.\n\n### **Need some help?**\n\nIf you need assistance, you can reach out to us through the following channels:\n\n- **Customer Support Chat:** Available in our web interface.\n    \n- **Emails:** api@heygen.com, [support@heygen.com](https://mailto:support@heygen.com)\n    \n- **Community Discussions:** Check out our [discussions channel](https://null) – there's a good chance our community has the answer you're looking for."
@@ -72,11 +72,11 @@ paths:
               type: object
               properties:
                 aspect_ratio:
-                  nullable: true
-                  example: 
+                  type: 'null'
+                  example: null
                 callback_id:
-                  nullable: true
-                  example: 
+                  type: 'null'
+                  example: null
                 dimension:
                   type: object
                   properties:
@@ -133,8 +133,8 @@ paths:
             examples:
               v2/video/generate:
                 value:
-                  aspect_ratio: 
-                  callback_id: 
+                  aspect_ratio: null
+                  callback_id: null
                   dimension:
                     height: 720
                     width: 1280
@@ -576,6 +576,7 @@ paths:
                 events:
                   type: array
                   items: { }
+                  example: [ ]
                 url:
                   type: string
                   example: <url>
